--- a/style.css
+++ b/style.css
@@ -15,3 +15,50 @@ Mobil   0 - 539px
 Tablet  540px - 959px (čti jako 540px a víc)
 PC      960px a víc
 */
+
+h1 {
+  text-align: center;
+}
+
+.contact {
+  border: 2px solid rgb(202, 200, 200);
+  border-radius: 10px;
+  text-align: center;
+  padding: 20px;
+  margin-bottom: 20px;
+  max-width: 100%;
+}
+
+.photo-contact {
+  border-radius: 50%;
+}
+
+@media screen and (min-width: 540px) {
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+  }
+  
+  .contact {
+    display: flex;
+    flex: 0 0 calc((100% - 20px) / 2);
+    text-align: left;
+  }
+
+  .photo-contact {
+    margin-right: 20px;
+  }
+}
+  
+@media screen and (min-width: 960px) {
+  .contact {
+    display: block;
+    flex: 0 0 calc((100% - 60px) / 4);
+    text-align: center;
+  }
+
+  .photo-contact {
+    margin-right: 0px;
+  }
+}
